[gd_scene load_steps=5 format=3 uid="uid://dfcfm3j1kylc7"]

[ext_resource type="Script" uid="uid://dq4e31m5pptxo" path="res://scenes/pages/friends/friends_section.gd" id="1_spho4"]
[ext_resource type="PackedScene" uid="uid://41rsfctjfyrb" path="res://scenes/pages/friends/friend-info/action_friend_info.tscn" id="2_p4ax1"]
[ext_resource type="Texture2D" uid="uid://bnqhgj7knhwwp" path="res://asset/icon/group-grey.svg" id="3_kd8ju"]
[ext_resource type="Theme" uid="uid://cbq3hxgptt55t" path="res://resource/theme/main_theme.tres" id="4_5q36o"]

[node name="FriendsSection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_spho4")
type = 2
action_friend_info_scene = ExtResource("2_p4ax1")

[node name="Container" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="FriendsEmptyState" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="TextureRect" type="TextureRect" parent="FriendsEmptyState"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("3_kd8ju")
expand_mode = 2
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="FriendsEmptyState"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64

[node name="Label" type="Label" parent="FriendsEmptyState/MarginContainer"]
layout_mode = 2
theme = ExtResource("4_5q36o")
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_font_sizes/font_size = 48
text = "Your friends list is empty. Invite someone to join your adventure!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ReceivedEmptyState" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="TextureRect" type="TextureRect" parent="ReceivedEmptyState"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("3_kd8ju")
expand_mode = 2
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="ReceivedEmptyState"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64

[node name="Label" type="Label" parent="ReceivedEmptyState/MarginContainer"]
layout_mode = 2
theme = ExtResource("4_5q36o")
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_font_sizes/font_size = 48
text = "You're all caught up, no new friend requests yet!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="SentEmptyState" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="TextureRect" type="TextureRect" parent="SentEmptyState"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("3_kd8ju")
expand_mode = 2
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="SentEmptyState"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64

[node name="Label" type="Label" parent="SentEmptyState/MarginContainer"]
layout_mode = 2
theme = ExtResource("4_5q36o")
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_font_sizes/font_size = 48
text = "You have no pending sent requests."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
